# omOS-modules

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  unitest.yml
docker/: Dockerfile.nano_llm  Dockerfile.riva  Dockerfile.vila
docker/docker-compose/: docker-compose-nano_llm.yml
docker/scripts/: riva.sh
examples/: ASR.py
src/om1_speech/: __init__.py  __main__.py  main.py
src/om1_speech/audio/: audio_input_stream.py  audio_output_stream.py
src/om1_speech/interfaces/: audio_stream_input_interface.py
src/om1_speech/processor/: connection_processor.py
src/om1_speech/riva/: __init__.py  args.py  asr_processor.py  audio_device_input.py  audio_stream_input.py  tts_processor.py
src/om1_utils/healthcheck/: __init__.py  healthcheck.py
src/om1_utils/http/: __init__.py  server.py
src/om1_utils/ws/: server.py
src/om1_vlm/: __init__.py  __main__.py  main.py
src/om1_vlm/config/: config.py  config_manager.py
src/om1_vlm/interfaces/: vlm_processor_interface.py
src/om1_vlm/nv_nano_llm/: __init__.py  args.py  prompts.py  video_device_input.py
src/om1_vlm/processor/: connection_processor.py
src/om1_vlm/video/: __init__.py  video_stream.py
src/om1_vlm/vila_vlm/: __init__.py  args.py  model_loader.py  vila_model.py  vila_processor.py
src/omOS_speech/: __init__.py  __main__.py  main.py
src/omOS_speech/audio/: __init__.py  audio_input_stream.py  audio_output_stream.py
src/omOS_speech/interface/: __init__.py
src/omOS_speech/interfaces/: __init__.py  asr_processor_interface.py  audio_stream_input_interface.py
src/omOS_speech/processor/: __init__.py  connection_processor.py
src/omOS_speech/riva/: __init__.py  args.py  asr_processor.py  audio_device_input.py  audio_stream_input.py  tts_processor.py
src/omOS_utils/: __init__.py
src/omOS_utils/http/: __init__.py  server.py
src/omOS_utils/singleton/: __init__.py  singleton.py
src/omOS_utils/ws/: __init__.py  client.py  server.py
src/omOS_vlm/: __init__.py  __main__.py  main.py
src/omOS_vlm/config/: __init__.py  config.py  config_manager.py
src/omOS_vlm/interfaces/: __init__.py  video_stream_input_interface.py  vlm_processor_interface.py
src/omOS_vlm/nv_nano_llm/: __init__.py  args.py  prompts.py  video_device_input.py  video_stream_input.py  vlm_processor.py
src/omOS_vlm/processor/: __init__.py  connection_processor.py
src/omOS_vlm/video/: __init__.py  video_stream.py  video_utils.py
src/omOS_vlm/vila_vlm/: __init__.py  __main__.py  args.py  model_loader.py  video_stream_input.py  vila_processor.py
tests/OM1_speech/audio/: test_audio_input_stream.py  test_audio_output_stream.py
tests/OM1_speech/processor/: test_speech_connection_processor.py
tests/OM1_utils/http/: test_http_server.py
tests/OM1_utils/ws/: test_ws_client.py  test_ws_server.py
tests/OM1_vlm/processor/: test_vlm_connection_processor.py
tests/OM1_vlm/video/: test_video_stream.py
tests/om1_speech/audio/: test_audio_input_stream.py  test_audio_output_stream.py
(+11 files in other folders)
