[tool.poetry]
name = "omOS_modules"
version = "0.1.0"
description = "ML modules for omOS"
authors = ["openmind.org"]
readme = "README.md"
packages = [
    { include = "omOS_speech", from = "src" },
    { include = "omOS_utils", from = "src" },
    { include = "omOS_vlm", from = "src" }
]

[tool.poetry.scripts]
omOS_tts = "omOS_speech.audio.audio_output_stream:main"

[tool.poetry.dependencies]
python = ">=3.9"
pyaudio = "^0.2.13"
numpy = "^2.0.2"
websockets = "^14.0"
opencv-python = "^4.5.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.19.0"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"